Post API and swagger rebuild
