# swagger/openapi.yaml
@@ -122,6 +122,37 @@ paths:
           description: Forbidden
         '404':
           description: Not Found
+  /private/post/getUserPosts:
+    get:
+      tags:
+        - Post
+      description: ''
+      parameters: 
+        - name: userId
+          in : query
+          required: false
+          schema:
+            type: string
+          description: if no userId input,will get current user's posts
+        - name: isNeed
+          in : query
+          required: false
+          schema:
+            type: boolean
+      responses:
+        '200':
+          description: 回傳所有符合的Post
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Post'
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
   /public/post/getLimitWithType:
     get:
       tags:
@@ -526,29 +557,7 @@ paths:
       tags:
         - Users
       summary: 取得登入的User擁有的發文
-      description: ''
-      parameters: 
-        - in: query
-          name: isNeed
-          schema:
-            type: boolean
-          description: 是否為需求
-      responses:
-        '200':
-          description: Current User Posts
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Post'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Post'
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Posts not found
+      deprecated: true
   /private/user/getUser:
     get:
       tags:
@@ -615,33 +624,7 @@ paths:
       tags:
         - Users
       description: ''
-      parameters: 
-        - in: query
-          name: id
-          schema:
-            type: string
-          description: User ID
-        - in: query
-          name: isNeed
-          schema:
-            type: boolean
-          description: 是否為需求
-      responses:
-        '200':
-          description: Found User Posts
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Post'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Post'
-        '404': 
-          description: Not Found
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
+      deprecated: true
   /private/user/getAllUsername:
     get:
       tags:
